--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       <div class="benefits-item">
         <img
           class="benefits-item__icon"
-          src="../images/dist/about/trophy.svg"
+          src="images/dist/about/trophy.svg"
           alt=""
         />
 
@@ -295,7 +295,7 @@
       <div class="benefits-item">
         <img
           class="benefits-item__icon"
-          src="../images/dist/about/guarantee2.svg"
+          src="images/dist/about/guarantee2.svg"
           alt=""
         />
 
@@ -309,7 +309,7 @@
       <div class="benefits-item">
         <img
           class="benefits-item__icon"
-          src="../images/dist/about/warranty.svg"
+          src="images/dist/about/warranty.svg"
           alt=""
         />
         <div class="benefits-item__header">Надежность</div>
